--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="uft-8" />
         <title>Image Gallery</title>
+        <link rel="stylesheet", href="styles/layout.css", media="screen"/>
     </head>
-    <script src="code/showPic.js"></script>
     <body>
         <h1>Snapshots</h1>
         <ul>
@@ -23,5 +23,6 @@
         </ul>
         <img id="placeholder" , src="images/placeholder.gif" , alt="my image gallery" />
         <p id="description">Choose a image.</p>
+        <script src="code/showPic.js"></script>
     </body>
 </html>
